# go-e

./: Dockerfile  README.md  docker.sh  run.sh
ipc_task/: CMakeLists.txt
ipc_task/include/: Process.hpp  util.hpp
ipc_task/src/: Process.cpp  main.cpp
